--- a/app/src/main/res/layout/new_map_on_activity_detail.xml
+++ b/app/src/main/res/layout/new_map_on_activity_detail.xml
@@ -6,7 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
+    android:layout_marginTop=".5dp"
     >
+
+    <TextView
+        android:id="@+id/tv_heading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Information"
+        android:background="@color/white"
+        android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_semibold"
+        android:gravity="center"
+        android:textSize="@dimen/_14sdp"
+        android:padding="@dimen/_10sdp"/>
 
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -14,6 +27,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/tv_heading"
         />
 
 
@@ -21,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_80sdp"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
+        android:background="@drawable/white_gradient"
         android:gravity="center">
 
         <TextView
@@ -29,9 +43,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_5sdp"
-            android:fontFamily="@font/montserrat_bold"
+            android:fontFamily="@font/montserrat_medium"
             android:gravity="center"
-            android:text="10-May-2019 05: 00 PM - 2 AM"
+            android:text=""
             android:textColor="@color/black"
             android:textStyle="bold" />
 
@@ -42,9 +56,9 @@
             android:layout_below="@+id/date_time"
             android:layout_marginLeft="@dimen/_10sdp"
             android:layout_marginRight="@dimen/_10sdp"
-            android:fontFamily="@font/montserrat_light"
+            android:fontFamily="@font/montserrat_regular"
             android:gravity="center"
-            android:text="dfknsdkfnsdkjnfksjdnfkdsnfsdskfmldsfsdl;kfslkdfsdlkfsldkfl;dkf"
+            android:text=""
             android:textColor="@color/black" />
 
     </RelativeLayout>
