--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -99,14 +99,20 @@
         android:layout_below="@+id/toolbar"
         android:background="@color/m_f_gender_color"/>
 
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottomBar"
+        android:background="@color/white"
+        android:layout_below="@id/v_1">
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/feedLIstRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottomBar"
-        android:layout_below="@id/v_1"
-        android:background="@color/white"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+         />
+
+    </android.support.v4.widget.NestedScrollView>
 
     <FrameLayout
         android:id="@+id/detail_frame_fragments"
@@ -135,7 +141,6 @@
         android:layout_above="@+id/bottomBar"
         android:visibility="gone"
         android:background="@color/m_f_gender_color" />
-
 
 
     <TextView
@@ -168,7 +173,6 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/bordertxtview"
             android:orientation="horizontal">
-
 
             <TextView
                 android:id="@+id/txt_post_comment"
