--- a/app/src/main/res/layout/adapter_custom_trending.xml
+++ b/app/src/main/res/layout/adapter_custom_trending.xml
@@ -35,14 +35,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toStartOf="@+id/iv_add"
-                    android:layout_toLeftOf="@+id/iv_add"
+                    android:layout_toLeftOf="@+id/tv_follow"
                     android:fontFamily="@font/montserrat_medium"
+                    android:layout_marginRight="@dimen/_80sdp"
                     android:gravity="start"
                     android:maxLines="2"
                     android:text="Shubham"
                     android:textColor="@color/black2"
                     android:textSize="@dimen/_15ssp" />
-
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/iv_add"
@@ -52,7 +52,27 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="8dp"
                     android:scaleType="centerInside"
+                    android:visibility="gone"
                     app:srcCompat="@drawable/add_ico" />
+
+                <TextView
+                    android:id="@+id/tv_follow"
+                    android:layout_width="@dimen/_70sdp"
+                    android:layout_height="wrap_content"
+                    android:text="Follow"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="8dp"
+                    android:background="@drawable/follow_border"
+                    android:textColor="@color/green"
+                    android:paddingTop="@dimen/_2sdp"
+                    android:paddingBottom="@dimen/_2sdp"
+                    android:paddingRight="@dimen/_3sdp"
+                    android:textSize="@dimen/_9sdp"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/_3sdp"
+
+                    />
 
                 <LinearLayout
                     android:layout_width="match_parent"
