--- a/app/src/main/res/layout/fragment_new_searchk.xml
+++ b/app/src/main/res/layout/fragment_new_searchk.xml
@@ -30,7 +30,7 @@
                 android:background="@null"
                 android:ems="10"
                 android:fontFamily="@font/montserrat_bold"
-                android:hint="Search here..."
+                android:hint="search anything here"
                 android:paddingLeft="@dimen/_15sdp"
                 android:imeOptions="actionDone"
                 android:singleLine="true"
