--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -131,6 +131,7 @@
                         android:text="@string/lastname"
                         android:textColor="@color/setting_txt_color"
                         android:textSize="@dimen/_10ssp"/>
+
                     <android.support.v7.widget.AppCompatImageView
                         android:layout_width="@dimen/_35sdp"
                         android:layout_height="@dimen/_40sdp"
@@ -345,19 +346,20 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_45sdp"
-                    android:layout_marginTop="@dimen/_30sdp">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_30sdp"
+                   >
 
                     <fragment
                         android:id="@+id/autocomplete_fragment"
                         android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_40sdp"
+                        android:layout_height="match_parent"
                         android:layout_margin="@dimen/_3sdp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_45sdp"
+                        android:layout_height="wrap_content"
                         android:background="@color/white"
                         android:orientation="horizontal">
 
@@ -371,15 +373,18 @@
                         <TextView
                             android:id="@+id/txt_location"
                             android:layout_width="0dp"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_weight="1"
                             android:background="@null"
                             android:fontFamily="@font/myriadpro_regular"
                             android:gravity="center_vertical"
-                            android:maxLines="2"
+                            android:maxLines="4"
                             android:text="@string/yourlocatoion"
                             android:textColor="@color/setting_txt_color"
-                            android:textSize="@dimen/_12ssp"/>
+                            android:textSize="@dimen/_10ssp"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:layout_marginBottom="@dimen/_5sdp"/>
 
                         <android.support.v7.widget.AppCompatImageView
                             android:layout_width="35dp"
