--- a/app/src/main/res/layout/tags_special_vennuboard_layout.xml
+++ b/app/src/main/res/layout/tags_special_vennuboard_layout.xml
@@ -80,7 +80,9 @@
 
         <TextView
             android:id="@+id/tv_follow"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/_70sdp"
+            android:gravity="center"
+            android:textSize="@dimen/_11sdp"
             android:layout_height="wrap_content"
             android:text="Follow"
             android:layout_alignParentRight="true"
@@ -89,6 +91,7 @@
             android:background="@drawable/follow_border"
             android:textColor="@color/green"
             android:paddingTop="@dimen/_2sdp"
+            android:visibility="gone"
             android:paddingBottom="@dimen/_2sdp"
             android:paddingRight="@dimen/_15sdp"
             android:paddingLeft="@dimen/_15sdp"
@@ -96,16 +99,18 @@
 
         <TextView
             android:id="@+id/tv_unfollow"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/_70sdp"
+            android:gravity="center"
+            android:textSize="@dimen/_10sdp"
             android:layout_height="wrap_content"
             android:text="Unollow"
+            android:visibility="gone"
             android:textColor="@color/red_ring"
             android:paddingTop="@dimen/_2sdp"
             android:paddingBottom="@dimen/_2sdp"
             android:paddingRight="@dimen/_15sdp"
             android:paddingLeft="@dimen/_15sdp"
             android:layout_alignParentRight="true"
-            android:visibility="gone"
             android:layout_marginRight="@dimen/_10sdp"
             android:layout_centerVertical="true"
             android:background="@drawable/unfollow_border"
@@ -127,6 +132,7 @@
         android:layout_height="0.5dp"
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginLeft="@dimen/_15sdp"
+        android:visibility="gone"
         android:background="@color/m_f_gender_color" />
 
     <View
