--- a/app/src/main/res/layout/venueboard_view.xml
+++ b/app/src/main/res/layout/venueboard_view.xml
@@ -68,15 +68,16 @@
         android:orientation="vertical"
         android:paddingLeft="@dimen/_5sdp"
         >
-
+t
         <TextView
             android:id="@+id/tag__special_name"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/_16sdp"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center"
             android:text="Shhubham"
-            android:textColor="@color/black"
+            android:fontFamily="@font/montserrat_semibold"
+            android:textColor="@color/black50p"
             android:textSize="@dimen/_12sdp" />
 
     </LinearLayout>
