--- a/app/src/main/res/layout/tags_special_layout.xml
+++ b/app/src/main/res/layout/tags_special_layout.xml
@@ -59,11 +59,11 @@
             <TextView
                 android:id="@+id/tag__special_name"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/_16sdp"
-                android:maxWidth="@dimen/_150sdp"
+                android:layout_height="wrap_content"
+                android:maxWidth="@dimen/_155sdp"
                 android:fontFamily="@font/montserrat_medium"
                 android:gravity="center_vertical"
-                android:text="Shhubham"
+                android:text="free 20"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12sdp" />
 
