--- a/app/src/main/res/layout/venueboard_view.xml
+++ b/app/src/main/res/layout/venueboard_view.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
     android:id="@+id/rl_main"
     android:background="@color/white">
 
-
     <RelativeLayout
         android:id="@+id/uper_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/_60sdp"
         android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginRight="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_2sdp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+
         >
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -68,10 +70,10 @@
         android:orientation="vertical"
         android:paddingLeft="@dimen/_5sdp"
         >
-t
+
         <TextView
             android:id="@+id/tag__special_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center"
@@ -81,6 +83,5 @@ t
             android:textSize="@dimen/_12sdp" />
 
     </LinearLayout>
-
 
 </RelativeLayout>
