with viewpager of intronew screen (finishing required)

--- a/app/src/main/res/layout/welcome_slide4.xml
+++ b/app/src/main/res/layout/welcome_slide4.xml
@@ -7,5 +7,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitCenter"
-        android:background="@drawable/welcome_slide4"/>
+        android:background="@drawable/vp_slide4"/>
 </LinearLayout>
