--- a/app/src/main/res/layout/registration_part_one.xml
+++ b/app/src/main/res/layout/registration_part_one.xml
@@ -25,7 +25,7 @@
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/iv_report"
-            android:layout_width="180sdp"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/top_bar_profile"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
@@ -33,7 +33,5 @@
             app:srcCompat="@drawable/sk_logo_image" />
 
     </RelativeLayout>
-
-
 
 </RelativeLayout>
