--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -257,4 +257,10 @@
     <color name="new_reg_login_signup">#969696</color>
     <color name="fb_color">#3a5a97</color>
     <color name="google_color">#f34a38</color>
+
+    <color name="dark_gray_new_reg">#a5a5a5</color>
+    <color name="email_hint_new_reg">#929292</color>
+    <color name="border_line_new_reg">#c1c1c1</color>
+    <color name="button_text_new_reg">#7d7d7d</color>
+    <color name="button_background_new_reg">#1E828282</color>
 </resources>
